# SLSR

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  index.html  search-index.js
argparse/: index.html  struct.Collect.html  struct.DecrBy.html  struct.IncrBy.html  struct.List.html  struct.Parse.html  struct.ParseCollect.html  struct.ParseList.html  struct.ParseOption.html  struct.Print.html  struct.PushConst.html  struct.Store.html  struct.StoreConst.html  struct.StoreFalse.html  struct.StoreOption.html  struct.StoreTrue.html  trait.FromCommandLine.html
argparse/action/: enum.Action.html  enum.ParseResult.html  index.html  trait.IArgAction.html  trait.IArgsAction.html  trait.IFlagAction.html  trait.TypedAction.html
argparse/parser/: index.html  struct.ArgumentParser.html  struct.Ref.html  struct.Var.html
board_game_geom/: index.html  struct.CellId.html  struct.Move.html  struct.Point.html  struct.Points.html  struct.PointsInColumn.html  struct.PointsInRow.html  struct.Rotation.html  struct.Size.html  struct.Table.html  trait.Geom.html
cli/: Cargo.toml
cli/src/: bench.rs  error.rs  main.rs  parse_arg.rs  pprint.rs  solve.rs  test.rs  util.rs
cli/src/solver/: connect_map.rs  mod.rs  side_map.rs  theorem.rs  theorem_define.rs
core/: Cargo.toml
core/src/: board.rs  geom.rs  lattice_parser.rs  lib.rs  puzzle.rs  util.rs
etc/: download_puzzles.sh  urldecode.py
implementors/board_game_geom/: trait.Geom.js
implementors/union_find/: trait.Union.js
libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_NETLINK.html  constant.AF_PACKET.html  constant.AF_UNIX.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CBAUD.html  constant.CLOCAL.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_REALTIME.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  constant.CLONE_FS.html  constant.CLONE_IO.html  constant.CLONE_NEWIPC.html  constant.CLONE_NEWNET.html  constant.CLONE_NEWNS.html  constant.CLONE_NEWPID.html  constant.CLONE_NEWUSER.html  constant.CLONE_NEWUTS.html  constant.CLONE_PARENT.html  constant.CLONE_PARENT_SETTID.html  constant.CLONE_PTRACE.html  constant.CLONE_SETTLS.html  constant.CLONE_SIGHAND.html  constant.CLONE_SYSVSEM.html  constant.CLONE_THREAD.html  constant.CLONE_UNTRACED.html  constant.CLONE_VFORK.html  constant.CLONE_VM.html  constant.CODA_SUPER_MAGIC.html  constant.CPU_SETSIZE.html  constant.CR0.html  (+1199 more)
prototype/: Makefile  board.rs  myclone.rs  position.rs  print.rs  slither.rc  slither.rs  solver.rs  union_find.rs
puzzle/: example.txt
slither/: .gitignore  board.rs  point.rs  slither.rc  union_find.rs
solver/: Cargo.toml
solver/src/: connect_map.rs  lib.rs  side_map.rs  solver.rs  theorem.rs  theorem_define.rs
solver/src/model/: cell_geom.rs  connect_map.rs  side_map.rs  theorem.rs
solver/src/step/: apply_theorem.rs  connect_analysis.rs
src/: bench.rs  error.rs  main.rs  parse_arg.rs  pprint.rs  solve.rs  test.rs
src/argparse/: help.rs.html
src/board_game_geom/: lib.rs.html
src/slither/: board.rs  connect_map.rs  geom.rs  hint.rs  locale.rs  main.rs  pprint.rs  side_map.rs  solver.rs  util.rs
src/term/: lib.rs.html
src/union_find/: lib.rs.html  quick_find.rs.html  quick_union.rs.html  traits.rs.html  union.rs.html
srither/: index.html
srither-cli/: Cargo.toml
srither-cli/src/: main.rs  solve.rs
srither-core/: Cargo.toml
srither-core/src/: geom.rs  lattice_parser.rs  lib.rs  puzzle.rs
srither-solver/: Cargo.toml
srither-solver/src/: lib.rs  solver.rs  theorem_define.rs
srither-solver/src/model/: connect_map.rs  mod.rs  pattern.rs  side_map.rs  theorem.rs  theorem_pool.rs
srither-solver/src/model/theorem/: mod.rs  parse.rs
srither-solver/src/step/: apply_theorem.rs  connect_analysis.rs
srither_core/: index.html  sidebar-items.js
srither_core/geom/: index.html  sidebar-items.js  struct.CellId.html  struct.Move.html  struct.Point.html  struct.Points.html  struct.PointsInColumn.html  struct.PointsInRow.html  struct.Rotation.html  struct.Size.html  struct.Table.html  trait.Geom.html
srither_core/lattice_parser/: index.html  sidebar-items.js  struct.Cells.html  struct.HEdges.html  struct.LatticeParser.html  struct.ParseLatticeError.html  struct.VEdges.html
srither_core/puzzle/: enum.Edge.html  enum.Side.html  index.html  sidebar-items.js  struct.ParsePuzzleError.html  struct.Puzzle.html  type.Hint.html  type.ParsePuzzleResult.html
srither_solver/: fn.solve.html  index.html  sidebar-items.js  struct.Error.html  struct.Solutions.html  type.SolverResult.html
srither_solver/step/: sidebar-items.js
term/: enum.Attr.html  enum.Error.html  fn.stderr.html  fn.stdout.html  index.html  trait.Terminal.html  type.Result.html  type.StderrTerminal.html  type.StdoutTerminal.html
union_find/: enum.UnionResult.html  index.html  struct.QuickFindUf.html  struct.QuickUnionUf.html  struct.UnionByRank.html  struct.UnionByRankSize.html  struct.UnionBySize.html  struct.UnionBySizeRank.html  trait.Union.html  trait.UnionFind.html
(+94 files in other folders)
