[package]
name = "srither"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
term = "0.2"
argparse = "0.2"
kernel32-sys = "0.2"
libc = "0.2"
rustc-test = { git = "https://github.com/alexcrichton/rustc-test" }
time = "0.1"
winapi = "0.2"
srither-core = { path = "./srither-core" }
srither-solver = { path = "./srither-solver" }

[profile.release]
lto = true

