[package]
name = "srither"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
term = "0.4"
argparse = "0.2"
kernel32-sys = "0.2"
libc = "0.2"
time = "0.1"
winapi = "0.2"
srither-core = { path = "./srither-core" }
srither-solver = { path = "./srither-solver" }
clippy = {version = "0.0", optional = true}

[profile.release]
lto = true

[features]
default = []
dev = ["clippy", "srither-core/dev", "srither-solver/dev"]
