[package]
name = "slsr_cli"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/SLSR"
description = "Slither Link Solver written in Rust."

[[bin]]
name = "slsr-cli"

[dependencies]
docopt = "*"
docopt_macros = "*"
rustc-serialize = "*"
term = "*"
union-find = "*"
unicode-width = "*"
slsr_core = { path = "../core" }

[profile.release]
lto = true

