[package]
name = "slsr_cli"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/SLSR"
description = "Slither Link Solver written in Rust."

[[bin]]
name = "slsr-cli"

[dependencies]
docopt = "*"
libc = "*"
rustc-serialize = "*"
term = "*"
slsr_core = { path = "../core" }
slsr_solver = { path = "../solver" }

[profile.release]
lto = true

