[package]
name = "slsr_solver"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/SLSR"
description = "Slither Link Solver written in Rust."

[dependencies]
slsr_core = { path = "../core" }
union-find = "*"
# union-find = { path = "../../union-find-rs/" }
