[package]
name = "srither-cli"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
term = "*"
argparse = "*"
kernel32-sys = "*"
libc = "*"
rustc-test = { git = "https://github.com/alexcrichton/rustc-test" }
time = "*"
winapi = "*"
srither-core = { path = "../srither-core" }
srither-solver = { path = "../srither-solver" }

[profile.release]
lto = true

