[package]
name = "srither-core"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
board-game-geom = "0.1"
clippy = {version = "0.0", optional = true}

[features]
default = []
dev = ["clippy"]
