[package]
name = "srither-solver"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
srither-core = { path = "../srither-core" }
union-find = "*"

