[package]
name = "srither-solver"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license="MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/srither"
description = "Slither Link Solver written in Rust."

[dependencies]
srither-core = { path = "../srither-core" }
union-find = "0.3"
clippy = {version = "0.0", optional = true}

[features]
default = []
dev = ["clippy"]
